add desk header

--- a/index.html
+++ b/index.html
@@ -15,16 +15,33 @@
       <div class="snowflake">❅</div>
       <div class="snowflake">❆</div>
     </div>
-    <header class="header">
-      <div class="container">
-        <h1>С Новым годом, Надежда!</h1>
-        <p>
-          Этот сайт я создал для тебя, чтобы показать, как ты для меня дорога.
+    <header class="new-year-header">
+      <div class="container header-container">
+        <div class="header-wrapper">
+          <h1 class="glowing-text">С Новым годом, Надежда!</h1>
+          <nav class="header-nav">
+            <ul class="header-list">
+              <li class="header-item">
+                <a class="header-link" href="#">Фоточки</a>
+              </li>
+              <li class="header-item">
+                <a class="header-link" href="#">Видео</a>
+              </li>
+              <li class="header-item">
+                <a class="header-link" href="#">Класные моменты</a>
+              </li>
+              <li class="header-item">
+                <a class="header-link" href="#">Санта Клауса</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <p class="header-text">
+          Пусть этот год принесет счастье, радость и любовь в каждый твой день!
         </p>
       </div>
     </header>
-
-    <main>
+    <main class="main">
       <section class="gallery container">
         <h2>Наши лучшие моменты</h2>
         <div class="photos">
