--- a/index.html
+++ b/index.html
@@ -42,40 +42,78 @@
       </div>
     </header>
     <main class="main">
-      <section class="gallery container">
-        <h2 class="gallery-title">Наши лучшие моменты</h2>
+      <section class="gallery container section">
+        <h2 class="title">Наши лучшие моменты</h2>
         <ul class="gallery-list">
           <li class="gallery-item">
             <img class="gallery-img" src="./img/foto1.jpeg" alt="Момент 1" />
           </li>
           <li class="gallery-item">
-            <img src="./img/foto1.jpeg" alt="Момент 1" />
+            <img class="gallery-img" src="./img/2.jpg" alt="Момент 1" />
           </li>
           <li class="gallery-item">
-            <img src="./img/foto1.jpeg" alt="Момент 1" />
+            <img class="gallery-img" src="./img/foto1.jpeg" alt="Момент 1" />
           </li>
         </ul>
       </section>
 
-      <section class="reasons container hide">
-        <h2>10 причин, почему я тебя люблю</h2>
-        <ul>
-          <li>Твоя улыбка делает мой день светлее.</li>
-          <li>Ты всегда поддерживаешь меня.</li>
-          <li>Ты — мой лучший друг.</li>
-          <!-- Добавьте остальные пункты -->
+      <section class="reasons container section">
+        <h2 class="title">10 причин, почему я тебя люблю</h2>
+        <ul class="reasons-list">
+          <li class="reasons-item">
+            Твоя улыбка согревает меня даже в самые холодные зимние дни.
+          </li>
+          <li class="reasons-item">
+            Ты всегда рядом, когда мне нужна поддержка.
+          </li>
+          <li class="reasons-item">
+            С тобой каждое мгновение становится особенным.
+          </li>
+          <li class="reasons-item">Твой смех — лучшая музыка для моих ушей.</li>
+          <li class="reasons-item">Ты вдохновляешь меня быть лучше.</li>
+          <li class="reasons-item">
+            Ты умеешь видеть хорошее даже в самых простых вещах.
+          </li>
+          <li class="reasons-item">С тобой я чувствую себя самим собой.</li>
+          <li class="reasons-item">Ты делаешь мир вокруг ярче.</li>
+          <li class="reasons-item">
+            Ты — мой самый надежный друг и поддержка.
+          </li>
+          <li class="reasons-item">Ты делаешь этот Новый год незабываемым.</li>
         </ul>
       </section>
 
-      <section class="video container hide">
-        <h2>Наше видео-сокровище</h2>
-        <video class="controls">
-          <source
-            src="./video/WhatsApp Video 2024-12-20 at 00.11.58.mp4"
-            type="video/mp4"
-          />
-          Ваш браузер не поддерживает видео.
-        </video>
+      <section class="moments container section">
+        <h2 class="title">Наше видео-сокровище</h2>
+        <ul class="moments-list">
+          <li class="moments-item">
+            <video controls class="moments-video">
+              <source
+                src="./video/WhatsApp Video 2024-12-20 at 00.11.58.mp4"
+                type="video/mp4"
+              />
+              Ваш браузер не поддерживает видео.
+            </video>
+          </li>
+          <li class="moments-item">
+            <video controls class="moments-video">
+              <source
+                src="./video/WhatsApp Video 2024-12-20 at 00.11.58.mp4"
+                type="video/mp4"
+              />
+              Ваш браузер не поддерживает видео.
+            </video>
+          </li>
+          <li class="moments-item">
+            <video controls class="moments-video">
+              <source
+                src="./video/WhatsApp Video 2024-12-20 at 00.11.58.mp4"
+                type="video/mp4"
+              />
+              Ваш браузер не поддерживает видео.
+            </video>
+          </li>
+        </ul>
       </section>
 
       <section class="wishes container hide">
