add img and video scroll

--- a/index.html
+++ b/index.html
@@ -46,13 +46,31 @@
         <h2 class="title">Наши лучшие моменты</h2>
         <ul class="gallery-list">
           <li class="gallery-item">
-            <img class="gallery-img" src="./img/foto1.jpeg" alt="Момент 1" />
+            <img class="gallery-img" src="./img/3.webp" alt="Момент 1" />
           </li>
           <li class="gallery-item">
-            <img class="gallery-img" src="./img/2.jpg" alt="Момент 1" />
+            <img class="gallery-img" src="./img/4.webp" alt="Момент 1" />
           </li>
           <li class="gallery-item">
-            <img class="gallery-img" src="./img/foto1.jpeg" alt="Момент 1" />
+            <img class="gallery-img" src="./img/5.webp" alt="Момент 1" />
+          </li>
+          <li class="gallery-item">
+            <img class="gallery-img" src="./img/6.webp" alt="Момент 1" />
+          </li>
+          <li class="gallery-item">
+            <img class="gallery-img" src="./img/7.webp" alt="Момент 1" />
+          </li>
+          <li class="gallery-item">
+            <img class="gallery-img" src="./img/8.webp" alt="Момент 1" />
+          </li>
+          <li class="gallery-item">
+            <img class="gallery-img" src="./img/9.webp" alt="Момент 1" />
+          </li>
+          <li class="gallery-item">
+            <img class="gallery-img" src="./img/10.webp" alt="Момент 1" />
+          </li>
+          <li class="gallery-item">
+            <img class="gallery-img" src="./img/11.webp" alt="Момент 1" />
           </li>
         </ul>
       </section>
@@ -88,19 +106,19 @@
         <ul class="moments-list">
           <li class="moments-item">
             <video controls class="moments-video">
-              <source
-                src="./video/WhatsApp Video 2024-12-20 at 00.11.58.mp4"
-                type="video/mp4"
-              />
+              <source src="./video/1.mp4" type="video/mp4" />
               Ваш браузер не поддерживает видео.
             </video>
           </li>
           <li class="moments-item">
             <video controls class="moments-video">
-              <source
-                src="./video/WhatsApp Video 2024-12-20 at 00.11.58.mp4"
-                type="video/mp4"
-              />
+              <source src="./video/2.mp4" type="video/mp4" />
+              Ваш браузер не поддерживает видео.
+            </video>
+          </li>
+          <li class="moments-item">
+            <video controls class="moments-video">
+              <source src="./video/3.mp4" type="video/mp4" />
               Ваш браузер не поддерживает видео.
             </video>
           </li>
@@ -131,5 +149,6 @@
         <p>С любовью, Максим.</p>
       </div>
     </footer>
+    <!-- <script src="./js/scroll.js"></script> -->
   </body>
 </html>
