add poster to video

--- a/index.html
+++ b/index.html
@@ -112,25 +112,25 @@
         <h2 class="title">Наше видео-сокровище</h2>
         <ul class="moments-list">
           <li class="moments-item">
-            <video controls class="moments-video">
+            <video controls poster="./img/7.webp" class="moments-video">
               <source src="./video/1.mp4" type="video/mp4" />
               Ваш браузер не поддерживает видео.
             </video>
           </li>
           <li class="moments-item">
-            <video controls class="moments-video">
+            <video controls poster="./img/8.webp" class="moments-video">
               <source src="./video/2.mp4" type="video/mp4" />
               Ваш браузер не поддерживает видео.
             </video>
           </li>
           <li class="moments-item">
-            <video controls class="moments-video">
+            <video controls poster="./img/9.webp" class="moments-video">
               <source src="./video/3.mp4" type="video/mp4" />
               Ваш браузер не поддерживает видео.
             </video>
           </li>
           <li class="moments-item">
-            <video controls class="moments-video">
+            <video controls poster="./img/10.webp" class="moments-video">
               <source
                 src="./video/WhatsApp Video 2024-12-20 at 00.11.58.mp4"
                 type="video/mp4"
